Added property enable_https in Marathon App type

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1457,6 +1457,10 @@ node_types:
         required: no
         type: boolean
         default: true
+      enable_https:
+        required: no
+        type: boolean
+        default: false
     artifacts:
       image:
         file: ""
