--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1685,7 +1685,7 @@ node_types:
         default: "dodasts/ttscache"
     artifacts:
       htcondor_config_role:
-        file: indigo-dc.htcondor_config,v1.0.0-dodas-authmap
+        file: indigo-dc.htcondor_config,v2.0.0-dodas-rc1	
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
