--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2457,6 +2457,10 @@ node_types:
         required: no
         type: string
         default: 1.14.0
+      kubelet_extra_args:
+        required: no
+        type: string
+        default: ""      
       kube_network:
         required: no
         type: string
@@ -2477,6 +2481,7 @@ node_types:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/k8s/artifacts/lrms/kubernetes/kube_wn_install.yml
           inputs:
             kube_version: { get_property: [ SELF, kube_version ] }
+            kubelet_extra_args: { get_property: [ SELF, kubelet_extra_args ] }
             kube_front_end_ip: { get_property: [ SELF, front_end_ip ] }
             wn_hybrid_cluster:  { get_property: [ SELF, hybrid] }
             kube_network: { get_property: [ SELF, kube_network] }
