--- a/artifacts/lrms/kubernetes/kube_fe_install.yml
+++ b/artifacts/lrms/kubernetes/kube_fe_install.yml
@@ -18,7 +18,7 @@
     when: fe_hybrid_cluster
   - role: indigo-dc.nfs
     nfs_mode: 'server'
-    nfs_exports: [{path: "/pv", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
+    nfs_exports: [{path: "/pv", export: "*(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
   - role: indigo-dc.kubernetes
     kube_server: '{{ kube_front_end_ip }}'
     kube_api_server: '{{ kube_front_end_ip }}'
