--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2467,7 +2467,7 @@ node_types:
         default: flannel
     artifacts:
       kube_role:
-        file: indigo-dc.kubernetes
+        file: cloud-pg.kubernetes,v2.0.0-dodas-rc1
         type: tosca.artifacts.AnsibleGalaxy.role
       nfs_role:
         file: indigo-dc.nfs
@@ -2507,7 +2507,7 @@ node_types:
         default: flannel
     artifacts:
       kube_role:
-        file: indigo-dc.kubernetes
+        file: cloud-pg.kubernetes,v2.0.0-dodas-rc1
         type: tosca.artifacts.AnsibleGalaxy.role
       nfs_role:
         file: indigo-dc.nfs
