--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1618,8 +1618,8 @@ node_types:
         required: yes
         default: DUMMY
     artifacts:
-      htcondor_config_role:
-        file: cloud-pg.ansible_role_condor_client,v2.0.0-dodas-rc1
+      htcondor_client_config_role:
+        file: cloud-pg.ansible_role_condor_client,v2.0.0-dodas-rc2
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
