--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1805,7 +1805,7 @@ node_types:
             config_proxycache_image: { get_property: [ SELF, proxycache_image ]}
     requirements:
       - host:
-          capability: tosca.capabilities.indigo.KubernetesMaster
+          capability: tosca.capabilities.indigo.ClusterMaster
           relationship: tosca.relationships.HostedOn
           node: tosca.nodes.SoftwareComponent
           occurrences: [1, 1]
