--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2499,7 +2499,11 @@ node_types:
       kubelet_extra_args:
         required: no
         type: string
-        default: ""      
+        default: ""
+      node_name:
+        required: no
+        type: string
+        default: "AUTO" 
       kube_network:
         required: no
         type: string
@@ -2522,6 +2526,7 @@ node_types:
         configure:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/k8s/artifacts/lrms/kubernetes/kube_wn_install.yml
           inputs:
+            node_name: { get_property: [ SELF, node_name ] }
             kube_version: { get_property: [ SELF, kube_version ] }
             kubelet_extra_args: { get_property: [ SELF, kubelet_extra_args ] }
             kube_front_end_ip: { get_property: [ SELF, front_end_ip ] }
