Fixing vars in elk playbook

--- a/artifacts/elk/elasticsearch_install.yml
+++ b/artifacts/elk/elasticsearch_install.yml
@@ -2,8 +2,8 @@
 - hosts: localhost
   connection: local
   vars:
-    - es_config:
-        network.bind_host: "{{ bind_address }}"
-        discovery.type: "{{ discovery_type }}"
+    es_config:
+      network.bind_host: "{{ bind_address }}"
+      discovery.type: "{{ discovery_type }}"
   roles:
     - role: elastic.elasticsearch
