helm example fix

--- a/artifacts/helm/helm.yml
+++ b/artifacts/helm/helm.yml
@@ -2,4 +2,4 @@
 - hosts: localhost
   connection: local
   roles:
-    - role: cloud-pg.ansible_role_helm
+    - role: dciangot.ansible_role_helmtest
