--- a/dodas_types/dodas_artifacts/k3s.yaml
+++ b/dodas_types/dodas_artifacts/k3s.yaml
@@ -9,5 +9,5 @@
       nfs_mode: 'client'
       nfs_client_imports: [{ local: "/mnt/nfs", remote: "/root", server_host: "{{ nfs_master_ip }}" }]
       when: (mode == "node")
-    - role: indigo-dc.docker
+    #- role: indigo-dc.docker
     - role: cloud-pg.ansible_role_k3s 
